Add detailed school profile and update about pages
Added 'About Us.md' and 'School Profile Document.md' with comprehensive information about Surjomukhi Kindergarten. Refactored about-us, founders, and history frontend pages to display expanded details, mission, vision, governance, facilities, and contact info. Introduced new components and localization updates to support richer content and improved presentation.

--- a/src/locales/bn.json
+++ b/src/locales/bn.json
@@ -5,6 +5,15 @@
     "home": "হোম",
     "about": "সম্পর্কে",
     "contact": "যোগাযোগ",
+    "academic": "শিক্ষাক্রম",
+    "admission": "ভর্তি",
+    "students": "শিক্ষার্থী",
+    "teachers": "শিক্ষকগণ",
+    "news": "সংবাদ",
+    "events": "অনুষ্ঠান",
+    "notices": "বিজ্ঞপ্তি",
+    "gallery": "গ্যালারি",
+    "downloads": "ডাউনলোড",
     "welcome": "আমাদের ওয়েবসাইটে স্বাগতম!",
     "loading": "লোড হচ্ছে...",
     "error": "ত্রুটি",
@@ -26,7 +35,13 @@
     "previous": "পূর্ববর্তী",
     "joinOurCommunity": "আমাদের সম্প্রদায়ে যোগ দিন",
     "applyForAdmission": "ভর্তির জন্য আবেদন করুন",
-    "contactUs": "আমাদের সাথে যোগাযোগ করুন"
+    "contactUs": "আমাদের সাথে যোগাযোগ করুন",
+    "established": "প্রতিষ্ঠিত",
+    "location": "অবস্থান",
+    "phone": "ফোন",
+    "email": "ইমেইল",
+    "website": "ওয়েবসাইট",
+    "address": "ঠিকানা"
   },
   "stats": {
     "students": "শিক্ষার্থী",
@@ -35,7 +50,11 @@
     "classes": "ক্লাস",
     "successRate": "সাফল্যের হার",
     "title": "আমাদের অর্জন",
-    "subtitle": "আমাদের উৎকর্ষতার কথা বলে এমন সংখ্যা"
+    "subtitle": "আমাদের উৎকর্ষতার কথা বলে এমন সংখ্যা",
+    "currentStudents": "৫৫+",
+    "establishedYear": "২০০৪",
+    "totalGrades": "৬",
+    "yearsOfService": "২০+"
   },
   "eventsNotices": {
     "title": "ইভেন্ট ও নোটিশ",
@@ -144,7 +163,24 @@
     "allRightsReserved": "সকল অধিকার সংরক্ষিত",
     "copyright": "© ২০২৪ সূর্যমুখী কিন্ডারগার্টেন। সকল অধিকার সংরক্ষিত।",
     "privacyPolicy": "গোপনীয়তা নীতি",
-    "termsOfService": "সেবার শর্তাবলী"
+    "termsOfService": "সেবার শর্তাবলী",
+    "establishedSince": "২০১০ সাল থেকে প্রতিষ্ঠিত"
+  },
+  "newsletter": {
+    "title": "আপডেট থাকুন",
+    "description": "সূর্যমুখী কিন্ডারগার্টেনের সর্বশেষ সংবাদ, ইভেন্ট এবং আপডেটের জন্য আমাদের নিউজলেটার সাবস্ক্রাইব করুন।",
+    "emailLabel": "ইমেইল ঠিকানা",
+    "emailPlaceholder": "আপনার ইমেইল ঠিকানা লিখুন",
+    "nameLabel": "নাম (ঐচ্ছিক)",
+    "namePlaceholder": "আপনার নাম (ঐচ্ছিক)",
+    "submit": "সাবস্ক্রাইব করুন",
+    "submitting": "সাবস্ক্রাইব করা হচ্ছে...",
+    "submitLabel": "নিউজলেটার সাবস্ক্রাইব করুন",
+    "success": "সাবস্ক্রাইব করার জন্য ধন্যবাদ! আপনি আমাদের সর্বশেষ আপডেট পাবেন।",
+    "emailRequired": "ইমেইল ঠিকানা প্রয়োজন",
+    "emailInvalid": "অনুগ্রহ করে একটি বৈধ ইমেইল ঠিকানা লিখুন",
+    "submitError": "সাবস্ক্রাইব করতে ব্যর্থ। অনুগ্রহ করে পরে আবার চেষ্টা করুন।",
+    "privacy": "আমরা আপনার গোপনীয়তাকে সম্মান করি। আপনি যেকোনো সময় আনসাবস্ক্রাইব করতে পারেন।"
   },
   "contact": {
     "getInTouch": "যোগাযোগ করুন",
@@ -249,28 +285,123 @@
     }
   },
   "about": {
-    "title": "আমাদের স্কুল সম্পর্কে",
-    "subtitle": "১৯৯৫ সাল থেকে আমাদের যাত্রা, লক্ষ্য এবং শিক্ষাগত উৎকর্ষতার প্রতি অঙ্গীকার আবিষ্কার করুন।",
+    "title": "সূর্যমুখী কিন্ডারগার্টেন সম্পর্কে",
+    "subtitle": "২০০৪ সালে প্রতিষ্ঠিত একটি বেসরকারি প্রাথমিক শিক্ষা প্রতিষ্ঠান, সৃজনশীল ও নৈতিক শিক্ষার মাধ্যমে সামগ্রিক উন্নয়নে প্রতিশ্রুতিবদ্ধ।",
+    "description": "সূর্যমুখী কিন্ডারগার্টেন একটি বেসরকারি প্রাথমিক শিক্ষা প্রতিষ্ঠান যা ০১-০১-২০০৪ তারিখে প্রতিষ্ঠিত হয় এবং সালাউদ্দিন কমপ্লেক্স, আওনা বাজার, নবাবগঞ্জ, ঢাকা-১৩২০ এ অবস্থিত। স্কুলটি নার্সারি থেকে ৫ম শ্রেণী পর্যন্ত বাংলা মাধ্যমে শিক্ষা প্রদান করে এবং সৃজনশীল ও নৈতিক শিক্ষার মাধ্যমে শিক্ষার্থীদের সামগ্রিক উন্নয়নে কাজ করে।",
+    "ideals": {
+      "title": "আমাদের আদর্শ",
+      "items": [
+        "শিক্ষাই জাতির মেরুদণ্ড",
+        "শান্তিই পরম ধর্ম",
+        "ঐক্য ও অগ্রগতির চেতনা",
+        "সৃজনশীল শিক্ষার মাধ্যমে প্রগতিশীল সমাজ গঠন"
+      ]
+    },
     "mission": {
       "title": "আমাদের লক্ষ্য",
-      "description1": "মানসম্পন্ন শিক্ষা প্রদান করা যা তরুণ মনকে লালন করে, সমালোচনামূলক চিন্তাভাবনার দক্ষতা বিকাশ করে এবং ক্রমবর্ধমান বিশ্বে সাফল্যের জন্য শিক্ষার্থীদের প্রস্তুত করে। আমরা একটি শিক্ষার পরিবেশ গড়ে তুলতে প্রতিশ্রুতিবদ্ধ যা একাডেমিক উৎকর্ষতা, চরিত্র গঠন এবং সামাজিক দায়বদ্ধতা প্রচার করে।",
-      "description2": "আমাদের নিবেদিতপ্রাণ শিক্ষক ও কর্মীরা নিরলসভাবে কাজ করেন যাতে প্রতিটি শিক্ষার্থী তাদের পূর্ণ সম্ভাবনায় পৌঁছানোর জন্য ব্যক্তিগত মনোযোগ এবং সহায়তা পায়।"
+      "items": [
+        "মানুষের দোরগোড়ায় আধুনিক শিক্ষা পৌঁছে দেওয়া",
+        "শিক্ষার্থীদের সৃজনশীলতা, নৈতিক চরিত্র এবং মানবিক মূল্যবোধ লালন করা",
+        "সাহিত্য, সংস্কৃতি এবং খেলাধুলার মাধ্যমে একটি ব্যাপক শিক্ষার পরিবেশ তৈরি করা"
+      ]
     },
     "vision": {
       "title": "আমাদের দৃষ্টিভঙ্গি",
-      "description": "একটি অগ্রণী শিক্ষা প্রতিষ্ঠান হওয়া যা আজীবন শিক্ষায় অনুপ্রাণিত করে, বিশ্বব্যাপী নাগরিক গড়ে তোলে এবং উদ্ভাবন, সৃজনশীলতা এবং নৈতিক নেতৃত্বের মাধ্যমে সমাজে ইতিবাচক অবদান রাখতে শিক্ষার্থীদের ক্ষমতায়ন করে।"
+      "items": [
+        "একটি নির্ভরযোগ্য এবং আদর্শ স্থানীয় প্রতিষ্ঠান হয়ে ওঠা",
+        "সুবিধাবঞ্চিত গোষ্ঠীর অংশগ্রহণ নিশ্চিত করা এবং মেধাবী অভাবী শিক্ষার্থীদের সহায়তা করা"
+      ]
     },
     "history": {
       "title": "আমাদের ইতিহাস",
-      "subtitle": "প্রায় তিন দশক ধরে শিক্ষাগত উৎকর্ষতার যাত্রা।",
+      "subtitle": "২০০৪ সাল থেকে শিক্ষাগত উৎকর্ষতার যাত্রা।",
       "founded": {
-        "title": "১৯৯৫ সালে প্রতিষ্ঠিত",
-        "description": "আমাদের স্কুল স্থানীয় সম্প্রদায়ের জন্য মানসম্পন্ন শিক্ষা প্রদানের দৃষ্টিভঙ্গি নিয়ে প্রতিষ্ঠিত হয়েছিল। মাত্র ৫০ জন শিক্ষার্থী এবং ৫ জন শিক্ষক নিয়ে শুরু করে, আমরা একটি সমৃদ্ধ শিক্ষা প্রতিষ্ঠানে পরিণত হয়েছি।"
+        "title": "২০০৪ সালে প্রতিষ্ঠিত",
+        "description": "সূর্যমুখী কিন্ডারগার্টেন ১ জানুয়ারি, ২০০৪ তারিখে প্রতিষ্ঠিত হয়, নার্সারি থেকে ৫ম শ্রেণী পর্যন্ত মানসম্পন্ন বাংলা মাধ্যম শিক্ষা প্রদানের অঙ্গীকার নিয়ে।"
       },
       "growth": {
-        "title": "ক্রমাগত বৃদ্ধি",
-        "description": "বছরের পর বছর ধরে, আমরা আমাদের সুবিধা সম্প্রসারিত করেছি, আমাদের পাঠ্যক্রম উন্নত করেছি এবং আধুনিক শিক্ষণ পদ্ধতি গ্রহণ করেছি। আজ, আমরা ২৫+ যোগ্য শিক্ষকের একটি নিবেদিতপ্রাণ দল নিয়ে ৪৫০+ শিক্ষার্থীকে সেবা প্রদান করি।"
+        "title": "ক্রমাগত উন্নয়ন",
+        "description": "বছরের পর বছর ধরে, আমরা সামগ্রিক উন্নয়নের প্রতি আমাদের অঙ্গীকার বজায় রেখেছি, একটি লালনকারী পরিবেশে সৃজনশীল ও নৈতিক শিক্ষার সাথে একাডেমিক উৎকর্ষতার সমন্বয় করে।"
       }
+    },
+    "academics": {
+      "title": "শিক্ষাক্রম",
+      "description": "নার্সারি থেকে ৫ম শ্রেণী পর্যন্ত বাংলা মাধ্যমে শিক্ষা প্রদান করা হয়। শ্রেণীভিত্তিক শিক্ষার্থী সংখ্যা যথাযথ কাঠামোর সাথে বজায় রাখা হয়।",
+      "details": [
+        "প্রাক-প্রাথমিক: ৩০ জন শিক্ষার্থী",
+        "১ম শ্রেণী: ২৫ জন শিক্ষার্থী",
+        "অন্যান্য শ্রেণী: কাঠামোবদ্ধ ভর্তি"
+      ]
+    },
+    "governance": {
+      "title": "পরিচালনা",
+      "description": "সাত সদস্যবিশিষ্ট পরিচালনা/ব্যবস্থাপনা পর্ষদের কাঠামো যথাযথ প্রশাসন নিশ্চিত করে:",
+      "structure": [
+        "সাত সদস্যবিশিষ্ট পরিচালনা/ব্যবস্থাপনা পর্ষদ",
+        "প্রধান শিক্ষক সদস্য-সচিব হিসেবে",
+        "শিক্ষক প্রতিনিধি",
+        "অভিভাবক প্রতিনিধি (পুরুষ ও মহিলা)",
+        "অবসরপ্রাপ্ত সরকারি কর্মকর্তা",
+        "শিক্ষাগত সিদ্ধান্তের জন্য নিয়মিত সভা"
+      ]
+    },
+    "facilities": {
+      "title": "আমাদের সুবিধাসমূহ",
+      "subtitle": "সামগ্রিক উন্নয়নে সহায়ক ব্যাপক সুবিধা",
+      "items": [
+        {
+          "title": "নিরাপদ পরিবেশ",
+          "description": "দুটি টয়লেট এবং নিরাপদ পানীয় জল উপলব্ধ",
+          "icon": "🚿"
+        },
+        {
+          "title": "খেলাধুলার সুবিধা",
+          "description": "ফুটবল, ক্রিকেট, ব্যাডমিন্টন এবং দাবার জন্য ১০০x৬০ গজ খেলার মাঠ",
+          "icon": "⚽"
+        },
+        {
+          "title": "সাংস্কৃতিক কর্মসূচি",
+          "description": "নিয়মিত সাংস্কৃতিক অনুষ্ঠান, বিতর্ক এবং কাব স্কাউট কার্যক্রম",
+          "icon": "🎭"
+        },
+        {
+          "title": "দৈনন্দিন কার্যক্রম",
+          "description": "দৈনিক সমাবেশ এবং জাতীয় দিবস পালন",
+          "icon": "🏫"
+        }
+      ]
+    },
+    "studentSupport": {
+      "title": "শিক্ষার্থী সহায়তা",
+      "items": [
+        {
+          "title": "গ্রন্থাগার",
+          "description": "সম্পদ অনুযায়ী গ্রন্থাগার প্রতিষ্ঠা"
+        },
+        {
+          "title": "বৃত্তি",
+          "description": "প্রাতিষ্ঠানিক পরীক্ষার মাধ্যমে বৃত্তি প্রদান"
+        },
+        {
+          "title": "নিরাপত্তা কমিটি",
+          "description": "পাঁচ সদস্যবিশিষ্ট যৌন হয়রানি বিরোধী কমিটি"
+        }
+      ]
+    },
+    "contact": {
+      "title": "যোগাযোগের তথ্য",
+      "address": "সালাউদ্দিন কমপ্লেক্স, আওনা বাজার, নবাবগঞ্জ, ঢাকা-১৩২০",
+      "phone": "০১৮১৯১৯৮৯৬৫, ০১৭১১৫২৮০৪৫",
+      "email": "surjamukhikindergarten@gmail.com",
+      "website": "www.surjamukhikindergarten.com"
+    },
+    "stats": {
+      "title": "আমাদের প্রভাব",
+      "subtitle": "প্রাথমিক শিক্ষায় পরিবর্তন আনা",
+      "established": "২০০৪",
+      "students": "৫৫+",
+      "grades": "৬",
+      "experience": "২০+"
     },
     "values": {
       "title": "আমাদের মূল মূল্যবোধ",
@@ -331,11 +462,39 @@
       },
       "founders": {
         "title": "আমাদের প্রতিষ্ঠাতা",
-        "subtitle": "আমাদের কিন্ডারগার্টেন প্রতিষ্ঠাকারী দূরদর্শীদের সাথে পরিচিত হন"
+        "subtitle": "আমাদের কিন্ডারগার্টেন প্রতিষ্ঠাকারী দূরদর্শীর সাথে পরিচিত হন",
+        "description": "সূর্যমুখী কিন্ডারগার্টেন একটি বেসরকারি নার্সারি থেকে ৫ম শ্রেণী পর্যন্ত স্কুল যা ১ জানুয়ারি, ২০০৪ তারিখে প্রতিষ্ঠিত হয়, সালাউদ্দিন কমপ্লেক্স, আওনা বাজার, নবাবগঞ্জ, ঢাকা-১৩২০ এ অবস্থিত। স্কুলটি বাংলা মাধ্যমে পরিচালিত হয় এবং সৃজনশীল, নৈতিক ও সামগ্রিক শিক্ষা প্রদানের লক্ষ্য রাখে।",
+        "founder": {
+          "name": "শেখ ইমরান মাহমুদ",
+          "title": "প্রতিষ্ঠাতা ও স্বত্বাধিকারী",
+          "description": "সূর্যমুখী কিন্ডারগার্টেনের প্রতিষ্ঠাতা ও প্রধান উদ্যোক্তা, যিনি স্বত্বাধিকারী বা পরিচালক হিসেবে প্রতিষ্ঠান পরিচালনা করেন এবং সরকারি আবেদনপত্রে স্বাক্ষর করেন। তার নেতৃত্বে স্কুলটি সৃজনশীল, নৈতিক ও সামগ্রিক উন্নয়নের উপর গুরুত্ব দিয়ে মানসম্পন্ন বাংলা মাধ্যম শিক্ষা প্রদানের অঙ্গীকার বজায় রেখেছে।",
+          "vision": "একটি শিক্ষা প্রতিষ্ঠান গড়ে তোলা যা মানসম্পন্ন শিক্ষার মাধ্যমে জাতির মেরুদণ্ড হিসেবে কাজ করবে, সম্প্রদায়ে শান্তি, ঐক্য ও অগ্রগতি বৃদ্ধি করবে।",
+          "contact": {
+            "mobile": "০১৮১৯১৯৮৯৬৫",
+            "email": "surjamukhikindergarten@gmail.com",
+            "website": "www.surjamukhikindergarten.com"
+          }
+        }
       },
       "history": {
         "title": "আমাদের ইতিহাস",
-        "subtitle": "শিক্ষাগত উৎকর্ষতার আমাদের যাত্রা আবিষ্কার করুন"
+        "subtitle": "২০০৪ সাল থেকে শিক্ষাগত উৎকর্ষতার আমাদের যাত্রা আবিষ্কার করুন",
+        "description": "সূর্যমুখী কিন্ডারগার্টেন ২০০ৄ সালের শুরুতে আওনা, নবাবগঞ্জ, ঢাকায় যাত্রা শুরু করে। প্রতিষ্ঠার পর থেকেই স্কুলটি নার্সারি থেকে ৫ম শ্রেণী পর্যন্ত শিশুদের শিক্ষা প্রদান করে আসছে, নৈতিক মূল্যবোধ, ঐক্য, শান্তি, সৃজনশীলতা এবং অগ্রগতিকে অগ্রাধিকার দিয়ে।",
+        "founding": {
+          "year": "২০০৪",
+          "title": "সূচনা",
+          "description": "সূর্যমুখী কিন্ডারগার্টেন ১ জানুয়ারি, ২০০৪ তারিখে আওনা, নবাবগঞ্জ, ঢাকায় প্রতিষ্ঠিত হয়, নার্সারি থেকে ৫ম শ্রেণী পর্যন্ত মানসম্পন্ন বাংলা মাধ্যম শিক্ষা প্রদানের দৃষ্টিভঙ্গি নিয়ে।"
+        },
+        "ideals": {
+          "title": "প্রতিষ্ঠার আদর্শ",
+          "primary": "শিক্ষাই জাতির মেরুদণ্ড",
+          "secondary": "শান্তিই পরম ধর্ম",
+          "description": "এই প্রতিষ্ঠার আদর্শগুলি প্রতিষ্ঠানটিকে মানসম্পন্ন শিক্ষার মাধ্যমে একটি প্রগতিশীল, অন্তর্ভুক্তিমূলক সমাজ গড়তে পথ দেখায়।"
+        },
+        "mission": {
+          "title": "আমাদের লক্ষ্য",
+          "description": "প্রতিষ্ঠানটি স্থানীয় সম্প্রদায়ের চাহিদা পূরণের জন্য কাঠামোবদ্ধ এবং সুবিধাবঞ্চিত ও মেধাবী শিক্ষার্থীদের সক্রিয়ভাবে সহায়তা করে, নৈতিক মূল্যবোধ, ঐক্য, শান্তি, সৃজনশীলতা এবং অগ্রগতির উপর ফোকাস বজায় রাখে।"
+        }
       },
       "campusTour": {
         "title": "ক্যাম্পাস ট্যুর",
@@ -350,5 +509,163 @@
         "subtitle": "আমাদের প্রশাসনিক দল"
       }
     }
+  },
+  "schoolInfo": {
+    "established": "২০০৪",
+    "establishedDate": "১ জানুয়ারি, ২০০৪",
+    "location": "সালাউদ্দিন কমপ্লেক্স, আওনা বাজার, নবাবগঞ্জ, ঢাকা-১৩২০",
+    "medium": "বাংলা মাধ্যম",
+    "grades": "নার্সারি থেকে ৫ম শ্রেণী",
+    "type": "বেসরকারি প্রাথমিক শিক্ষা প্রতিষ্ঠান",
+    "phone1": "০১৮১৯১৯৮৯৬৫",
+    "phone2": "০১৭১১৫২৮০৪৫",
+    "email": "surjamukhikindergarten@gmail.com",
+    "website": "www.surjamukhikindergarten.com",
+    "currentStudents": "৫৫+",
+    "totalGrades": "৬"
+  },
+  "academic": {
+    "title": "শিক্ষাগত উৎকর্ষতা",
+    "subtitle": "নার্সারি থেকে ৫ম শ্রেণী পর্যন্ত ব্যাপক শিক্ষা",
+    "description": "আমরা সৃজনশীল এবং নৈতিক শিক্ষণ পদ্ধতির মাধ্যমে সামগ্রিক উন্নয়নের উপর ফোকাস করে মানসম্পন্ন বাংলা মাধ্যম শিক্ষা প্রদান করি।",
+    "medium": "বাংলা মাধ্যম",
+    "grades": "নার্সারি থেকে ৫ম শ্রেণী",
+    "classStructure": {
+      "title": "শ্রেণী কাঠামো",
+      "prePrimary": "প্রাক-প্রাথমিক: ৩০ জন শিক্ষার্থী",
+      "grade1": "১ম শ্রেণী: ২৫ জন শিক্ষার্থী",
+      "otherGrades": "অন্যান্য শ্রেণী: কাঠামোবদ্ধ ভর্তি"
+    },
+    "subjects": {
+      "title": "বিষয়সমূহ",
+      "description": "প্রাথমিক শিক্ষার জন্য সকল প্রয়োজনীয় বিষয় সম্বলিত ব্যাপক পাঠ্যক্রম"
+    },
+    "teachers": {
+      "title": "আমাদের শিক্ষকগণ",
+      "description": "শিক্ষার্থী উন্নয়নে নিবেদিত যোগ্য ও অভিজ্ঞ শিক্ষকগণ"
+    },
+    "calendar": {
+      "title": "শিক্ষাবর্ষ ক্যালেন্ডার",
+      "description": "গুরুত্বপূর্ণ তারিখ এবং শিক্ষাবর্ষের সময়সূচী"
+    },
+    "rules": {
+      "title": "শিক্ষাগত নিয়মাবলী",
+      "description": "শিক্ষাগত উৎকর্ষতার জন্য নির্দেশনা এবং নিয়মকানুন"
+    }
+  },
+  "admission": {
+    "title": "ভর্তির তথ্য",
+    "subtitle": "আমাদের শিক্ষা পরিবারে যোগ দিন",
+    "description": "আমরা এমন শিক্ষার্থীদের স্বাগত জানাই যারা আমাদের লালনকারী পরিবেশে শিখতে এবং বেড়ে উঠতে আগ্রহী।",
+    "policy": {
+      "title": "ভর্তি নীতি",
+      "description": "আমাদের ভর্তি প্রক্রিয়া প্রতিটি শিক্ষার্থীর জন্য সর্বোত্তম উপযুক্ততা নিশ্চিত করার জন্য ডিজাইন করা হয়েছে"
+    },
+    "howToApply": {
+      "title": "কীভাবে আবেদন করবেন",
+      "description": "ভর্তি প্রক্রিয়ার ধাপে ধাপে নির্দেশিকা"
+    },
+    "applyOnline": {
+      "title": "অনলাইনে আবেদন করুন",
+      "description": "সুবিধার জন্য অনলাইনে আপনার আবেদন জমা দিন"
+    },
+    "requirements": {
+      "title": "প্রয়োজনীয়তা",
+      "items": [
+        "পূরণকৃত আবেদনপত্র",
+        "জন্ম সনদ",
+        "পূর্ববর্তী শিক্ষাগত রেকর্ড (যদি প্রযোজ্য হয়)",
+        "অভিভাবকের যোগাযোগের তথ্য",
+        "সাম্প্রতিক ছবি"
+      ]
+    }
+  },
+  "students": {
+    "title": "শিক্ষার্থী তথ্য",
+    "subtitle": "আমাদের শিক্ষার্থীদের জন্য সম্পদ এবং সেবা",
+    "fees": {
+      "title": "ফি কাঠামো",
+      "description": "স্বচ্ছ এবং সাশ্রয়ী ফি কাঠামো"
+    },
+    "examSchedule": {
+      "title": "পরীক্ষার সময়সূচী",
+      "description": "গুরুত্বপূর্ণ পরীক্ষার তারিখ এবং তথ্য"
+    },
+    "rules": {
+      "title": "শিক্ষার্থী নিয়মাবলী",
+      "description": "শিক্ষার্থীদের আচরণ এবং ব্যবহারের জন্য নির্দেশিকা"
+    },
+    "syllabus": {
+      "title": "পাঠ্যসূচী",
+      "description": "ব্যাপক পাঠ্যক্রম এবং শিক্ষণ উদ্দেশ্য"
+    },
+    "list": {
+      "title": "শিক্ষার্থী তালিকা",
+      "description": "বর্তমানে ভর্তিকৃত শিক্ষার্থীদের তথ্য"
+    },
+    "verifyCertificate": {
+      "title": "সনদ যাচাই করুন",
+      "description": "আমাদের প্রতিষ্ঠান কর্তৃক প্রদত্ত সনদের সত্যতা যাচাই করুন"
+    }
+  },
+  "teachers": {
+    "title": "আমাদের অনুষদ",
+    "subtitle": "উৎকর্ষতার প্রতি প্রতিশ্রুতিবদ্ধ নিবেদিত শিক্ষাবিদগণ",
+    "description": "আমাদের যোগ্য এবং অভিজ্ঞ শিক্ষকগণ আমাদের শিক্ষাগত উৎকর্ষতার মেরুদণ্ড।"
+  },
+  "contact": {
+    "title": "আমাদের সাথে যোগাযোগ করুন",
+    "subtitle": "আমাদের সাথে যোগাযোগ করুন",
+    "description": "আমরা সাহায্য করতে এবং আপনার যেকোনো প্রশ্নের উত্তর দিতে এখানে আছি।",
+    "address": "সালাউদ্দিন কমপ্লেক্স, আওনা বাজার, নবাবগঞ্জ, ঢাকা-১৩২০",
+    "phone": "০১৮১৯১৯৮৯৬৫, ০১৭১১৫২৮০৪৫",
+    "email": "surjamukhikindergarten@gmail.com",
+    "website": "www.surjamukhikindergarten.com",
+    "form": {
+      "title": "আমাদের একটি বার্তা পাঠান",
+      "name": "পূর্ণ নাম",
+      "email": "ইমেইল ঠিকানা",
+      "phone": "ফোন নম্বর",
+      "subject": "বিষয়",
+      "message": "বার্তা",
+      "send": "বার্তা পাঠান"
+    }
+  },
+  "news": {
+    "title": "সর্বশেষ সংবাদ",
+    "subtitle": "আমাদের সর্বশেষ ঘোষণার সাথে আপডেট থাকুন",
+    "noNews": "এই মুহূর্তে কোনো সংবাদ উপলব্ধ নেই"
+  },
+  "events": {
+    "title": "আসন্ন অনুষ্ঠান",
+    "subtitle": "উত্তেজনাপূর্ণ কার্যক্রম এবং অনুষ্ঠানে আমাদের সাথে যোগ দিন",
+    "noEvents": "এই মুহূর্তে কোনো আসন্ন অনুষ্ঠান নেই"
+  },
+  "notices": {
+    "title": "গুরুত্বপূর্ণ বিজ্ঞপ্তি",
+    "subtitle": "গুরুত্বপূর্ণ ঘোষণা সম্পর্কে অবগত থাকুন",
+    "noNotices": "এই মুহূর্তে কোনো বিজ্ঞপ্তি উপলব্ধ নেই"
+  },
+  "gallery": {
+    "title": "ছবির গ্যালারি",
+    "subtitle": "সূর্যমুখী কিন্ডারগার্টেনের জীবনের ঝলক",
+    "noImages": "এই মুহূর্তে কোনো ছবি উপলব্ধ নেই"
+  },
+  "downloads": {
+    "title": "ডাউনলোড",
+    "subtitle": "গুরুত্বপূর্ণ নথি এবং সম্পদ",
+    "noDownloads": "এই মুহূর্তে কোনো ডাউনলোড উপলব্ধ নেই"
+  },
+  "hero": {
+    "title": "সূর্যমুখী কিন্ডারগার্টেনে স্বাগতম",
+    "subtitle": "২০০৪ সাল থেকে প্রাথমিক শিক্ষায় উৎকর্ষতা",
+    "description": "একটি বেসরকারি প্রাথমিক শিক্ষা প্রতিষ্ঠান যা নার্সারি থেকে ৫ম শ্রেণী পর্যন্ত সৃজনশীল, নৈতিক ও সামগ্রিক উন্নয়নের উপর ফোকাস করে মানসম্পন্ন বাংলা মাধ্যম শিক্ষা প্রদান করে।",
+    "enrollNow": "ভর্তির জন্য আবেদন করুন",
+    "learnMore": "আরও জানুন"
+  },
+  "contact": {
+    "title": "যোগাযোগ",
+    "subtitle": "ভর্তি, অনুসন্ধান বা যেকোনো প্রশ্নের জন্য আমাদের সাথে যোগাযোগ করুন।",
+    "description": "ভর্তি এবং অনুসন্ধানের জন্য সূর্যমুখী কিন্ডারগার্টেনের সাথে যোগাযোগ করুন"
   }
 }
